--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ discord = "^1.0.1"
 replit = "^2.0.0"
 Flask = "^1.1.2"
 emoji = "^1.2.0"
+discord-pretty-help = "^1.2.1"
 
 [tool.poetry.dev-dependencies]
 
