--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ replit = "^2.0.0"
 Flask = "^1.1.2"
 emoji = "^1.2.0"
 discord-pretty-help = "^1.2.1"
+GitPython = "^3.1.14"
+pygit2 = "^1.5.0"
 
 [tool.poetry.dev-dependencies]
 
