--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ emoji = "^1.2.0"
 discord-pretty-help = "^1.2.1"
 GitPython = "^3.1.14"
 pygit2 = "^1.5.0"
+unidecode = "^1.2.0"
 
 [tool.poetry.dev-dependencies]
 
