--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ discord-pretty-help = "^1.2.1"
 GitPython = "^3.1.14"
 pygit2 = "^1.5.0"
 unidecode = "^1.2.0"
+pyimgur = "^0.6.0"
 
 [tool.poetry.dev-dependencies]
 
